--- a/calculator.html
+++ b/calculator.html
@@ -120,12 +120,12 @@
               type="number" 
               name="inputVelocity" 
               id="initialVelocity" 
-              class="reset_form" 
+              class="reset_form checkCalc checkLetter" 
               value="10"
-              autocomplete="off"
-              min="0"
+              min="0.01"
               max="999"
               step="0.01"
+              autocomplete="off"
               aria-label="input value for velocity" 
               required><br>
               <label for="units">Units</label><br>
@@ -159,9 +159,9 @@
               type="number" 
               name="inputYellowPhase" 
               id="yellowPhase" 
-              class="reset_form" 
+              class="reset_form checkCalc" 
               value="4"
-              min="0"
+              min="0.01"
               max="999"
               step="0.01"
               autocomplete="off"
@@ -194,12 +194,12 @@
               type="number" 
               name="inputInterPhase" 
               id="interPhase" 
-              class="reset_form" 
+              class="reset_form checkCalc" 
               value="2" 
-              autocomplete="off"
-              min="0"
+              min="0.01"
               max="999"
               step="0.01"
+              autocomplete="off"
               aria-label="input value for the interphase"
               required><br>
             </div>
@@ -245,9 +245,9 @@
               type="number" 
               name="inputReactionTime" 
               id="reactionTime" 
-              class="reset_form" 
+              class="reset_form checkCalc" 
               value="1"
-              min="0"
+              min="0.001"
               max="999"
               step="0.001"
               autocomplete="off"
@@ -276,11 +276,11 @@
               <input 
               type="number" 
               id="friction" 
-              class="reset_form" 
+              class="reset_form checkFriction" 
               value="0.8"
-              min="0"
+              min="0.001"
               max="1"
-              step="0.01"
+              step="0.001"
               autocomplete="off"
               aria-label="input value for coefficient of friction" 
               required><br>
@@ -303,9 +303,9 @@
               <input 
               type="number" 
               id="intersectionDistance" 
-              class="reset_form" 
+              class="reset_form checkCalc" 
               value="40"
-              min="0"
+              min="0.01"
               max="999"
               step="0.01"
               autocomplete="off"
@@ -356,12 +356,12 @@
               <input 
               type="number" 
               id="length" 
-              class="reset_form" 
+              class="reset_form checkCalc" 
               value="4.5" 
-              autocomplete="off"
-              min="0"
+              min="0.01"
               max="999"
               step="0.01"
+              autocomplete="off"
               aria-label="input value for length of vehicle"
               required><br>
             </div>
@@ -504,6 +504,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="assets/scripts/dependencies.js"></script>
   <script src="assets/scripts/calculator.js"></script>
+  <script src="assets/scripts/form_validation.js"></script>
   <div id="fb-root"></div>
   <script src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0&appId=335490644461179&autoLogAppEvents=1" nonce="jH6xsmAN"></script>
   
