--- a/calculator.html
+++ b/calculator.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Bootstrap CDN-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <!--Fontawesome CDN-->
+   <!--Fontawesome CDN-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
   <!--Favicon-->
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -120,10 +120,10 @@
               type="number" 
               name="inputVelocity" 
               id="initialVelocity" 
-              class="reset_form checkCalc checkLetter" 
+              class="reset_form checkVelocity" 
               value="10"
               min="0.01"
-              max="999"
+              max="300"
               step="0.01"
               autocomplete="off"
               aria-label="input value for velocity" 
@@ -159,10 +159,10 @@
               type="number" 
               name="inputYellowPhase" 
               id="yellowPhase" 
-              class="reset_form checkCalc" 
+              class="reset_form checkYellowPhase" 
               value="4"
               min="0.01"
-              max="999"
+              max="12"
               step="0.01"
               autocomplete="off"
               aria-label="input value for the yellow phase" 
@@ -194,10 +194,10 @@
               type="number" 
               name="inputInterPhase" 
               id="interPhase" 
-              class="reset_form checkCalc" 
+              class="reset_form checkInterPhase" 
               value="2" 
               min="0.01"
-              max="999"
+              max="12"
               step="0.01"
               autocomplete="off"
               aria-label="input value for the interphase"
@@ -245,10 +245,10 @@
               type="number" 
               name="inputReactionTime" 
               id="reactionTime" 
-              class="reset_form checkCalc" 
+              class="reset_form checkReactionTime" 
               value="1"
               min="0.001"
-              max="999"
+              max="6"
               step="0.001"
               autocomplete="off"
               aria-label="input value for reaction time" 
@@ -303,10 +303,10 @@
               <input 
               type="number" 
               id="intersectionDistance" 
-              class="reset_form checkCalc" 
+              class="reset_form checkIntersection" 
               value="40"
-              min="0.01"
-              max="999"
+              min="10"
+              max="350"
               step="0.01"
               autocomplete="off"
               aria-label="input value for the intersection distance" 
@@ -356,10 +356,10 @@
               <input 
               type="number" 
               id="length" 
-              class="reset_form checkCalc" 
+              class="reset_form checkLength" 
               value="4.5" 
-              min="0.01"
-              max="999"
+              min="1"
+              max="50"
               step="0.01"
               autocomplete="off"
               aria-label="input value for length of vehicle"
