--- a/test_yourself.html
+++ b/test_yourself.html
@@ -896,6 +896,7 @@
   <script src="assets/scripts/maps.js"></script>
   <script src="assets/scripts/dependencies.js"></script>
   <script src="assets/scripts/test_yourself.js"></script>
+  <script src="assets/scripts/form_validation.js"></script>
   <script src="https://unpkg.com/@google/markerclustererplus@5.1.0/dist/markerclustererplus.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBWKHz27Q-E_mW5wHULLj6Wgap3VOjrCbs&callback=initMap"></script>
   <div id="fb-root"></div>
