--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="row">
       <!-- Row One Calculators, Help and Games -->
       <div class="col-lg-4 content-div">
-        <div class="card shadow text-center">
+        <div class="card card-animate shadow text-center">
           <i class="fas fa-calculator fa-5x icon-center"></i>
           <div class="card-body">
             <h5 class="card-title">Calculators <span class="badge badge-pill badge-danger"><i class="fas fa-meteor"></i> New</span></h5>
@@ -123,7 +123,7 @@
         </div>
       </div>
       <div class="col-lg-4 content-div">
-        <div class="card shadow text-center">
+        <div class="card card-animate shadow text-center">
           <i class="fas fa-info-circle fa-5x icon-center"></i>
           <div class="card-body">
             <h5 class="card-title">Help</h5>
@@ -142,7 +142,7 @@
       </div>
 
       <div class="col-lg-4 content-div">
-        <div class="card shadow text-center">
+        <div class="card card-animate shadow text-center">
           <i class="fas fa-gamepad fa-5x icon-center"></i>
           <div class="card-body">
             <h5 class="card-title">Games <a href="game.html"><span class="badge badge-pill badge-danger"><i class="fas fa-play-circle"></i> Try it!</span></a></h5>
@@ -167,7 +167,7 @@
 
       <!-- Row two Test Yourself and Contact Us -->
       <div class="col-lg-6 content-div">
-        <div class="card shadow text-center">
+        <div class="card card-animate shadow text-center">
           <i class="fas fa-pencil-ruler fa-5x icon-center"></i>
           <div class="card-body">
             <h5 class="card-title">Test Yourself <span class="badge badge-pill badge-danger"><i class="fas fa-meteor"></i> New</span></h5>
@@ -186,7 +186,7 @@
       </div>
 
       <div class="col-lg-6 content-div">
-        <div class="card shadow text-center">
+        <div class="card card-animate shadow text-center">
           <i class="fas fa-envelope-open fa-5x icon-center"></i>
           <div class="card-body">
             <h5 class="card-title">Contact Us</h5>
@@ -207,14 +207,14 @@
       <div class="row pb-2">
         <div class="media">
           <!-- Author image appears on the left on medium and large devices -->
-          <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block d-xl-block" src="assets/images/author-questions.png" alt="The author">
+          <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block d-xl-block card-animate" src="assets/images/author-questions.png" alt="The author">
           <div class="media-body">
             <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
             <!-- Author image appears next to header on small devices -->
-            <img class="author-img center img-fluid d-xs-block d-sm-block d-md-block d-lg-none" src="assets/images/author-questions-small.jpg" alt="The author">
-            <p class="mx-2">Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national 
+            <img class="author-img center img-fluid d-xs-block d-sm-block d-md-block d-lg-none card-animate" src="assets/images/author-questions-small.jpg" alt="The author">
+            <p class="mx-2 text-center">Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national 
             curriculms of New Zealand, Australia and Sweden.</p>
-            <p class="mb-0 mx-2">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's
+            <p class="mb-0 mx-2 text-center">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's
               passion for differentiation and full classroom inclusion with easy, self guided instruction, and Physics Code is born.</p>
           </div>
         </div>
