--- a/contact.html
+++ b/contact.html
@@ -99,19 +99,19 @@
         <div class="col-12 content-div">
           <div class="form-group">
             <label for="inputName">Your name</label>
-            <input type="text" class="form-control" name="from_name" id="inputName" placeholder="Enter your name" required>
+            <input type="text" class="form-control checkValid" name="from_name" id="inputName" placeholder="Enter your name" required>
             <label for="inputEmailAddress">Email address</label>
-            <input type="email" class="form-control" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
+            <input type="email" class="form-control checkValid" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
             <small id="emailHelp">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
             <label for="userRequest">Message</label>
-            <textarea rows="10" name="calculator_request" class="form-control" id="userRequest" placeholder="Input your suggestions" required></textarea>
+            <textarea rows="10" name="calculator_request" class="form-control checkValid" id="userRequest" placeholder="Input your suggestions" required></textarea>
           </div>
 
           <div class="row">
             <div class="col-12 title-div text-center">
-              <button class="btn btn-success btn-green btn-rounded btn-lg btn--padding"><i class="fas fa-paper-plane"></i> Submit</button>
+              <button class="btn btn-success btn-green btn-rounded btn-lg btn--padding" id="checkValid"><i class="fas fa-paper-plane"></i> Submit</button>
             </div>
           </div>
         </div>
