--- a/contact.html
+++ b/contact.html
@@ -99,14 +99,14 @@
         <div class="col-12 content-div">
           <div class="form-group">
             <label for="inputName">Your name</label>
-            <input type="text" class="form-control checkValid" name="from_name" id="inputName" placeholder="Enter your name" required>
+            <input type="text" class="form-control checkValidName" name="from_name" id="inputName" placeholder="Enter your name" required>
             <label for="inputEmailAddress">Email address</label>
-            <input type="email" class="form-control checkValid" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
+            <input type="email" class="form-control checkValidEmail" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
             <small id="emailHelp">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
             <label for="userRequest">Message</label>
-            <textarea rows="10" name="calculator_request" class="form-control checkValid" id="userRequest" placeholder="Input your suggestions" required></textarea>
+            <textarea rows="10" name="calculator_request" class="form-control checkValidMessage" id="userRequest" placeholder="Input your suggestions" required></textarea>
           </div>
 
           <div class="row">
