Fix buttons that were not initially disabled on the test_yourself page

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -498,7 +498,7 @@
           <div><span id="mapOneResultThree"></span></div>
         </div> <!-- End of the first modal-->
         <div class="modal-footer">
-          <button type="button" id="mapOneSubmit" class="btn btn-success btn-submit mapSubmit">&#x2713; Submit</button>
+          <button type="button" id="mapOneSubmit" class="btn btn-success btn-submit mapSubmit" disabled>&#x2713; Submit</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -577,7 +577,7 @@
           <div><span id="mapTwoResultThree"></span></div>
         </div> <!-- End of second modal-->
         <div class="modal-footer">
-          <button type="button" id="mapTwoSubmit" class="btn btn-success btn-submit">&#x2713; Submit</button>
+          <button type="button" id="mapTwoSubmit" class="btn btn-success btn-submit" disabled>&#x2713; Submit</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -655,7 +655,7 @@
           <div><span id="mapThreeResultThree"></span></div>
         </div><!-- End of Modal three-->
         <div class="modal-footer">
-          <button type="button" id="mapThreeSubmit" class="btn btn-success btn-submit">&#x2713; Submit</button>
+          <button type="button" id="mapThreeSubmit" class="btn btn-success btn-submit" disabled>&#x2713; Submit</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -733,7 +733,7 @@
           <div><span id="mapFourResultThree"></span></div>
         </div> <!-- End of modal Four-->
         <div class="modal-footer">
-          <button type="button" id="mapFourSubmit" class="btn btn-success btn-submit">&#x2713; Submit</button>
+          <button type="button" id="mapFourSubmit" class="btn btn-success btn-submit" disabled>&#x2713; Submit</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
@@ -811,7 +811,7 @@
           <div><span id="mapFiveResultThree"></span></div>
         </div> <!-- End of modal five-->
         <div class="modal-footer">
-          <button type="button" id="mapFiveSubmit" class="btn btn-success btn-submit">&#x2713; Submit</button>
+          <button type="button" id="mapFiveSubmit" class="btn btn-success btn-submit" disabled>&#x2713; Submit</button>
           <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
