Add disabled submit button on reset click on test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -489,7 +489,7 @@
               placeholder="e.g 12.34"
               required>
               <div class="input-group-append d-block">
-                <input type="reset" class="btn btn-danger" aria-label="reset your value">
+                <input type="reset" id="mapOneReset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
@@ -568,7 +568,7 @@
               placeholder="e.g 12.34"
               required>
               <div class="input-group-append d-block">
-                <input type="reset" class="btn btn-danger" aria-label="reset your value">
+                <input type="reset" id="mapTwoReset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
@@ -646,7 +646,7 @@
               placeholder="e.g 12.34"
               required>
               <div class="input-group-append d-block">
-                <input type="reset" class="btn btn-danger" aria-label="reset your value">
+                <input type="reset" id="mapThreeReset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
@@ -724,7 +724,7 @@
               placeholder="e.g 12.34"
               required>
               <div class="input-group-append d-block">
-                <input type="reset" class="btn btn-danger" aria-label="reset your value">
+                <input type="reset" id="mapFourReset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
@@ -802,7 +802,7 @@
               placeholder="e.g 12.34"
               required>
               <div class="input-group-append d-block">
-                <input type="reset" class="btn btn-danger" aria-label="reset your value">
+                <input type="reset" id="mapFiveReset" class="btn btn-danger" aria-label="reset your value">
               </div>
               <small>Then click on the <em>submit</em> button below to check your answers.</small>
             </div>
