Add scrolltop to calculator.html invalid inputs

--- a/calculator.html
+++ b/calculator.html
@@ -101,7 +101,7 @@
       <div class="row">
         <!-- Velocity Card-->
         <div class="col-lg-4 content-div">
-          <div class="card shadow">
+          <div class="card shadow cardBodyVelocity">
             <img class="card-img-top img-fluid" src="assets/images/card-images/velocity.png" alt="Input Velocity Image">
             <div class="card-body">
               <h5 class="card-title">Velocity (ms<sup>-1</sup>)
@@ -140,7 +140,7 @@
 
         <!-- Yellow light phase card-->
         <div class="col-lg-4 content-div">
-          <div class="card shadow">
+          <div class="card shadow cardBodyYellowLight">
             <img class="card-img-top img-fluid" src="assets/images/card-images/yellow.png" alt="Input Yellow Light Phase Image">
             <div class="card-body">
               <h5 class="card-title">Yellow Phase (s)
@@ -173,7 +173,7 @@
 
         <!-- Interphase card-->
         <div class="col-lg-4 content-div">
-          <div class="card shadow">
+          <div class="card shadow cardBodyRedLight">
             <img class="card-img-top img-fluid" src="assets/images/card-images/red.png" alt="Input Interphase Image">
             <div class="card-body">
               <h5 class="card-title">Interphase (s)
@@ -224,7 +224,7 @@
       <div class="row">
         <!-- Reaction Time Card-->
         <div class="col-lg-4 content-div">
-          <div class="card shadow">
+          <div class="card shadow cardBodyReaction">
             <img class="card-img-top img-fluid" src="assets/images/card-images/stopwatch.png" alt="Input Reaction Time Image">
             <div class="card-body">
               <h5 class="card-title">Reaction Time (s)
@@ -258,7 +258,7 @@
         </div>
         <!-- Coefficient of friction Card-->
         <div class="col-lg-4 content-div">
-          <div class="card shadow">
+          <div class="card shadow cardBodyFriction">
             <img class="card-img-top img-fluid" src="assets/images/card-images/friction.png" alt="Input Coefficient of Friction">
             <div class="card-body">
               <h5 class="card-title">Friction (μ)
@@ -290,7 +290,7 @@
 
         <!-- intersection Distance Card-->
         <div class="col-lg-4 content-div">
-          <div class="card shadow">
+          <div class="card shadow cardBodyIntersection">
             <img class="card-img-top img-fluid" src="assets/images/card-images/intersection.png" alt="Input Intersection Distance">
             <div class="card-body">
               <h5 class="card-title">Intersection (m)
@@ -338,7 +338,7 @@
         </div>
         <!-- Vehicle Length Card-->
         <div class="col-lg-4 content-div">
-          <div class="card shadow">
+          <div class="card shadow cardBodyLength">
             <img class="card-img-top img-fluid" src="assets/images/card-images/length.png" alt="Input Vehicle Length">
             <div class="card-body">
               <h5 class="card-title">Vehicle Length (m)
