--- a/contact.html
+++ b/contact.html
@@ -98,14 +98,14 @@
         <!-- Email Form-->
         <div class="col-12 content-div">
           <div class="form-group">
-            <label for="inputName">Your name</label>
+            <label id="inputNames" for="inputName">Your name</label>
             <input type="text" class="form-control checkValidName" name="from_name" id="inputName" placeholder="Enter your name" required>
-            <label for="inputEmailAddress">Email address</label>
+            <label id="inputEmails" for="inputEmailAddress">Email address</label>
             <input type="email" class="form-control checkValidEmail" name="from_email" id="inputEmailAddress" placeholder="Enter your email address" required>
             <small id="emailHelp">We'll never share your email with anyone else.</small>
           </div>
           <div class="form-group">
-            <label for="userRequest">Message</label>
+            <label id="inputUserRequests" for="userRequest">Message</label>
             <textarea rows="10" name="calculator_request" class="form-control checkValidMessage" id="userRequest" placeholder="Input your suggestions" required></textarea>
           </div>
 
