Add user first view user stories to README.md

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -472,7 +472,7 @@
                 Option Zone present
               </label>
             </div><br>
-            <p>Input your value for the zone (remove any negative sign and max 2 decimal places)</p>
+            <p>Input your value for the zone in metres (remove any negative sign and max 2 decimal places)</p>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
@@ -551,7 +551,7 @@
                 Option Zone present
               </label>
             </div><br>
-            <p>Input your value for the zone (remove any negative sign and max 2 decimal places)</p>
+            <p>Input your value for the zone in metres (remove any negative sign and max 2 decimal places)</p>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
@@ -629,7 +629,7 @@
                 Option Zone present
               </label>
             </div><br>
-            <p>Input your value for the zone (remove any negative sign and max 2 decimal places)</p>
+            <p>Input your value for the zone in metres (remove any negative sign and max 2 decimal places)</p>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
@@ -707,7 +707,7 @@
                 Option Zone present
               </label>
             </div><br>
-            <p>Input your value for the zone (remove any negative sign and max 2 decimal places)</p>
+            <p>Input your value for the zone in metres (remove any negative sign and max 2 decimal places)</p>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
@@ -785,7 +785,7 @@
                 Option Zone present
               </label>
             </div><br>
-            <p>Input your value for the zone (remove any negative sign and max 2 decimal places)</p>
+            <p>Input your value for the zone in metres (remove any negative sign and max 2 decimal places)</p>
             <div class="input-group mb-3">
               <div class="input-group-prepend">
                 <span class="input-group-text">Your Calculation</span>
