Edit and add data to README.md

--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
       <div class="row pb-2">
         <div class="media">
           <!-- Author image appears on the left on medium and large devices -->
-          <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block d-xl-block card-animate" src="assets/images/author-questions.png" alt="The author">
+          <img class="align-self-center author-img mr-3 img-fluid d-none d-md-none d-lg-block d-xl-block image-animate" src="assets/images/author-questions.png" alt="The author">
           <div class="media-body">
             <h5 class="mt-0">About the author <i class="fas fa-book-open"></i></h5>
             <!-- Author image appears next to header on small devices -->
-            <img class="author-img center img-fluid d-xs-block d-sm-block d-md-block d-lg-none card-animate" src="assets/images/author-questions-small.jpg" alt="The author">
+            <img class="author-img center img-fluid d-xs-block d-sm-block d-md-block d-lg-none image-animate" src="assets/images/author-questions-small.jpg" alt="The author">
             <p class="mx-2 text-center">Paul has been teaching Physics around the world now for 20 years in the International Baccalaureate and national 
             curriculms of New Zealand, Australia and Sweden.</p>
             <p class="mb-0 mx-2 text-center">Couple the teaching experience with web development and you have a new class of online resources for teaching and learning. Then fuse Paul's
