Edit README.md to include wireframes and site structure

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -406,7 +406,7 @@
           <div class="card-body">
             <p>Click on the map on or near the marker (make sure you're in satellite mode)
               and once you have established road names you can turn off labels for ease in measuring the intersection.</p>
-            <p>Measure the intersection length heading from the south continuing north on Constitutio Hill.</p>
+            <p>Measure the intersection length heading from the south continuing north on Constitution Hill.</p>
             <div class="container" id="map_five"></div>
             <div class="text-center mybuttons">
               <button 
