Fix grammar on help.html

--- a/help.html
+++ b/help.html
@@ -72,10 +72,10 @@
         <div class="container heading-background heading-padding heading-margin-top">
           <h1>Understanding the Dilemma Zone variables <i class="fas fa-info-circle"></i></h1>
           <p class="head-text">When approaching a controlled intersection and the traffic signal changes to yellow, a driver of a vehicle has one of two choices;
-            firstly, they can continue through the traffic signals and intersection or, brake in order to stop before the light changes red at the stop line.</p>
+            firstly, they can continue through the traffic signals and intersection or brake in order to stop before the light changes red at the stop line.</p>
           <p class="head-text">A dilemma zone exists where a vehicle would not be able to safely pass through the
             intersection nor stop before the stop line if a signal light were to turn yellow on approach.</p>
-          <p class="head-text">The risk involved to other drivers as well as the driver of the vehicle is significant in a dilemma zone situation. to date, no effective
+          <p class="head-text">The risk involved to other drivers as well as the driver of the vehicle is significant in a dilemma zone situation. To date, no effective
             calculator is available online to estimate if a dilemma zone exists at a particular intersection. This help file will give an understanding of the variables
             required and how the results can be evaluated.</p>
         </div>
@@ -128,7 +128,7 @@
         <div class="card shadow" id="card-help-text-yellow">
           <div class="card-body">
             <p>The yellow light phase (<sub>yp</sub>) is a predetermined length of time controlled at the intersection.</p>
-            <p>A usual time a light remains yellow can range from 3 to 5 seconds. For best results,
+            <p>The usual time a light remains yellow can range from 3 to 5 seconds. For best results,
               it is ideal to know the length of time the traffic signal remains yellow.</p>
             <p>This value, in seconds, gives the variable <em>time</em> in our velocity equation. This is rearranged to solve for distance.</p>
             <p>The equation to use: \[dist_{yp} = { velocity \cdot time_{yp}}\]</p>
@@ -162,7 +162,7 @@
         <div class="container heading-background heading-padding heading-margin">
           <h2>Reaction Time, Friction and Intersection Size</h2>
           <p class="card-text">
-            Here we discuss the best methods to determine the reaction time of a driver, the friction between the vehicle and the road and the size of an intersection.
+            Here we discuss the best methods to determine the reaction time of a driver, the friction between the vehicle and the road, and the size of an intersection.
           </p>
         </div>
       </div>
@@ -226,8 +226,8 @@
       <div class="col-lg-8 content-div">
         <div class="card shadow" id="card-help-text-intersection">
           <div class="card-body">
-            <p>There are a few methods to measuring intersection distances, the most precise method is being there. However, scaled maps on Google and Bing have
-              provided a chance to estimate the size of various intersections around the world. Although, ultimately, the next best method would be to have the
+            <p>There are a few methods to measuring intersection distances, the most precise method, however, is being at the intersection to measure it physically. 
+            However, scaled maps on Google and Bing have provided a chance to estimate the size of various intersections around the world. Ultimately, the next best method would be to have the
               engineering plans of the intersection. If these are available you can use the dilemma zone calculator to plot out the location of dilemma and option
               zones. Typically, you'd measure the intersection in metres. However, our calculator can convert yards into metres for you.</p>
             <p>An intersection is measured from stop line to opposite stop line. Currently, the calculator is not geared for perpendicular roads.
