Edit button name from Apple to iOS on test_yourself.html

--- a/test_yourself.html
+++ b/test_yourself.html
@@ -89,7 +89,7 @@
                   <span class="btn btn-primary btn-blue btn-rounded btn-block help--button"><i class="fab fa-android"></i> Android</span></a></li>
               <li class="list-group-item background-ul">
                 <a href="https://support.google.com/maps/answer/1628031?co=GENIE.Platform%3DiOS&hl=en" target="_blank">
-                  <span class="btn btn-primary btn-blue btn-rounded btn-block help--button"><i class="fab fa-apple"></i> Apple</span></a></li>
+                  <span class="btn btn-primary btn-blue btn-rounded btn-block help--button"><i class="fab fa-apple"></i> iOS</span></a></li>
             </ul>
           </div>
         </div>
